--- a/project_2/config/ekf.yaml
+++ b/project_2/config/ekf.yaml
@@ -4,7 +4,7 @@ ekf_filter_node:
 # The frequency, in Hz, at which the filter will output a position estimate. Note that the filter will not begin
 # computation until it receives at least one message from one of the inputs. It will then run continuously at the
 # frequency specified here, regardless of whether it receives more measurements. Defaults to 30 if unspecified.
-        frequency: 30.0
+        frequency: 10.0
         
 # ekf_localization_node and ukf_localization_node both use a 3D omnidirectional motion model. If this parameter is
 # set to true, no 3D information will be used in your state estimate. Use this if you are operating in a planar
@@ -39,10 +39,10 @@ ekf_filter_node:
                        false, false, true,  #vroll, vpitch, vyaw
                        false, false, false] #ax, ay, az
         
-        imu0: /imu
-        imu0_config: [false, false, false, #x, y, z
-                      true,  true,  true,  #roll, pitch, yaw
-                      false, false, false, #vx, vy, vz
-                      false, false, false, #vroll, vpitch, vyaw
-                      false, false, false] #ax, ay, az
+        # imu0: /imu
+        # imu0_config: [false, false, false, #x, y, z
+        #               true,  true,  true,  #roll, pitch, yaw
+        #               false, false, false, #vx, vy, vz
+        #               false, false, false, #vroll, vpitch, vyaw
+        #               false, false, false] #ax, ay, az
         
