--- a/project_2/config/ekf.yaml
+++ b/project_2/config/ekf.yaml
@@ -39,10 +39,10 @@ ekf_filter_node:
                        false, false, true,  #vroll, vpitch, vyaw
                        false, false, false] #ax, ay, az
         
-        # imu0: /imu
-        # imu0_config: [false, false, false, #x, y, z
-        #               true,  true,  true,  #roll, pitch, yaw
-        #               false, false, false, #vx, vy, vz
-        #               false, false, false, #vroll, vpitch, vyaw
-        #               false, false, false] #ax, ay, az
+        imu0: /imu
+        imu0_config: [false, false, false, #x, y, z
+                       false,  false,  false,  #roll, pitch, yaw
+                       false, false, false, #vx, vy, vz
+                       true, true, true, #vroll, vpitch, vyaw
+                       true, true, true] #ax, ay, az
         
